test/parser.d/should_fail/expr5.souc.bad
import importee

main() = do
	print expr++)
end main
